--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "jquery": "^1.11.3",
     "loader.js": "ember-cli/loader.js#3.4.0",
     "qunit": "~1.20.0",
-    "bootstrap-sass": "~3.3.6"
+    "bootstrap-sass": "~3.3.6",
+    "jquery-ui": "~1.11.4",
+    "pikaday": "~1.4.0"
   }
 }
