--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,9 @@
     "qunit": "~1.20.0",
     "bootstrap-sass": "~3.3.6",
     "jquery-ui": "~1.11.4",
-    "pikaday": "~1.4.0"
+    "pikaday": "~1.4.0",
+    "moment": ">= 2.8.0",
+    "moment-timezone": ">= 0.1.0",
+    "ladda-bootstrap": "~0.1.0"
   }
 }
