--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ember-data": "1.13.15",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
+    "ember-lodash": "0.0.6",
     "ember-moment": "4.2.1",
     "ember-power-select": "0.7.1",
     "ember-simple-auth": "1.0.1",
